--- a/frontend/assets/css/tailwind.css
+++ b/frontend/assets/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.hexagon-img {
+  clip-path: polygon(
+    25% 6%, 75% 6%, 
+    100% 50%, 75% 94%, 
+    25% 94%, 0% 50%
+  );
+  border-radius: 80px;
+}
